force-app/main/default/objects/GiftTransaction/fields/BAImpID__c.field-meta.xml
<CustomField>
    <fullName>BAImpID__c</fullName>
    <description>Bank import Id from blackbaud</description>
    <label>BAImpID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>