force-app/main/default/objects/GiftTransaction/fields/Card_holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_holder_Name__c</fullName>
    <label>Card holder Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>