force-app/main/default/objects/GiftTransaction/fields/GFAuthCode__c.field-meta.xml
<CustomField>
    <fullName>GFAuthCode__c</fullName>
    <description>Kept this field for data coming from  Blackbaud</description>
    <label>GFAuthCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>