force-app/main/default/objects/GiftTransaction/fields/Gift_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Gift_Import_Id__c</fullName>
    <externalId>true</externalId>
    <label>Gift Import Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>