force-app/main/default/objects/GiftTransaction/fields/gift_type__c.field-meta.xml
<CustomField>
    <fullName>gift_type__c</fullName>
    <label>gift type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pay-Stock/Property</fullName>
            </value>
            <value>
                <fullName>Pay-Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>