force-app/main/default/objects/GiftTransaction/fields/GiftId__c.field-meta.xml
<CustomField>
    <fullName>GiftId__c</fullName>
    <description>gift Id coming from Blackbaud</description>
    <externalId>true</externalId>
    <label>Gift Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>